:construction: add GitHub Actions for test & CodeCov